@@ -5,7 +5,7 @@ $EM_CONF[$_EXTKEY] = array(
     'description' => 'It brings the deprecated TYPO3 4.x class tslib_feTCE and the processScript FEData setup with new features partly back into TYPO3 8.x. This is needed by tt_board and tt_guest. Form MAIL and form wizards require the extension compatibility6.',
     'category' => 'plugin',
     'shy' => 0,
-    'version' => '0.3.1',
+    'version' => '0.3.2',
     'dependencies' => '',
     'conflicts' => '',
     'priority' => '',
